--- a/views/manage/components/nav-tree.ejs
+++ b/views/manage/components/nav-tree.ejs
@@ -4,7 +4,7 @@
     <a href="javascript:;">奖项管理</a>
     <dl class="layui-nav-child">
       <dd>
-        <a href="/manage/getPerizeAdd">&nbsp&nbsp新增得奖</a>
+        <a href="/manage/getPerizeAdd">&nbsp&nbsp得奖编辑</a>
       </dd>
 <!--       <dd>
         <a href="">&nbsp&nbsp所有得奖</a>
@@ -34,9 +34,9 @@
       <dd>
         <a href="/manage/personAdd">&nbsp&nbsp新增人员</a>
       </dd>
-<!--       <dd>
-        <a href="">&nbsp&nbsp所有人员</a>
-      </dd> -->
+      <dd>
+        <a href="/manage/personEidt">&nbsp&nbsp编辑人员</a>
+      </dd>
     </dl>
   </li>
   <li class="layui-nav-item layui-nav-itemed">
