--- a/views/screen.ejs
+++ b/views/screen.ejs
@@ -114,7 +114,7 @@
 						number=res.length;
 						for(let i=0;i<res.length;i++){
 							let text="<div personId=\""+res[i].id+"\" class=\"OnePerson\">\
-										<img src=\"image/headers/"+res[i].pic+"\">\
+										<img src=\"image/headers/"+res[i].photo+"\">\
 										</div>";
 							console.log(text);
 							$(".slick-for").slick('slickAdd',text);
