--- a/views/manage/dept-add.ejs
+++ b/views/manage/dept-add.ejs
@@ -20,7 +20,7 @@
     </div>
     <div class="layui-form-item">
       <div class="layui-input-block">
-        <input class="layui-btn" id="submit1" type="button" value="添加">
+        <input class="layui-btn" id="dept_submit" type="button" value="添加">
       </div>
     </div>
   </form>
@@ -28,12 +28,12 @@
     <div class="layui-form-item">
       <label class="layui-form-label">职位</label>
       <div class="layui-input-block">
-        <input class="layui-input" id="position" name="position" type="text" placeholder="position" />
+        <input class="layui-input" id="position" name="job" type="text" placeholder="job" />
       </div>
     </div>
     <div class="layui-form-item">
       <div class="layui-input-block">
-        <input class="layui-btn" id="submit2" type="button" value="添加">
+        <input class="layui-btn" id="job_submit" type="button" value="添加">
       </div>
     </div>
   </form>
@@ -45,63 +45,69 @@
     <table class="layui-table" >
       <colgroup>
         <col width="200">
+        <col width="150">
         <col width="200">
-        <col>
+        <col width="150">
       </colgroup>
       <thead>
         <tr>
           <th>部门</th>
+          <th>操作</th>
           <th>职位</th>
+          <th>操作</th>
         </tr> 
       </thead>
 
-      <%if(departments.length>positions.length){%>
-        <%for(var i=0;i<positions.length;i++){%>
+      <%if(departments.length>jobs.length){%>
+        <%for(var i=0;i<jobs.length;i++){%>
           <tbody>
             <tr>
-              <th><%=departments[i].post%></th>
-              <th><%if(i<positions.length){%><%=positions[i].job%><%}%></th>
+              <th><%=departments[i].name%></th>
+              <th>
+                <button class="layui-btn dept_edit" data-name="<%=departments[i].name%>" data-dept_id="<%=departments[i].dept_id%>">编辑</button>
+                <button class="layui-btn layui-btn-danger dept_dele" data-dept_id="<%=departments[i].dept_id%>">删除</button>
+              </th>
+              <%if(i<jobs.length){%>
+                <th><%=jobs[i].name%></th>
+                <th>
+                  <button class="layui-btn job_edit" data-name="<%=jobs[i].name%>" data-job_id="<%=jobs[i].job_id%>">编辑</button>
+                  <button class="layui-btn layui-btn-danger job_dele" data-job_id="<%=jobs[i].job_id%>">删除</button>
+                </th>
+              <%}else{%>
+                <th></th>
+                <th></th>
+              <%}%>
             </tr> 
           </tbody>
         <%}%>
       <%}else{%>
-        <%for(var i=0;i<positions.length;i++){%>
+        <%for(var i=0;i<jobs.length;i++){%>
           <tbody>
             <tr>
-              <th><%if(i<departments.length){%><%=departments[i].post%><%}%></th>
-              <th><%=positions[i].job%></th>
+              <%if(i<departments.length){%>
+                <th><%=departments[i].name%></th>
+                <th>
+                  <button class="layui-btn dept_edit" data-name="<%=departments[i].name%>" data-dept_id="<%=departments[i].dept_id%>">编辑</button>
+                  <button class="layui-btn layui-btn-danger dept_dele" data-dept_id="<%=departments[i].dept_id%>">删除</button>
+                </th>
+              <%}else{%>
+                <th></th>
+                <th></th>
+              <%}%>
+              <th><%=jobs[i].name%></th>     
+              <th>
+                <button class="layui-btn job_edit" data-name="<%=jobs[i].name%>" data-job_id="<%=jobs[i].job_id%>">编辑</button>
+                <button class="layui-btn layui-btn-danger job_dele" data-job_id="<%=jobs[i].job_id%>">删除</button>
+              </th>         
             </tr> 
           </tbody>
         <%}%>
       <%}%>
-
     </table>
   </div>
 </div>
 
 <script type="text/javascript" src="/libs/jquery/dist/jquery.min.js"></script>
 <script src="/libs/layui/layui.all.js"></script>
-<script type="text/javascript">
-    $('#submit1').click(function(){// 事件监听
-      let formData=new FormData(document.getElementById("newdepartment"));
-      console.log('formData2');
-      // ajax异步发送表单
-      let ajax=new XMLHttpRequest();
-
-      ajax.open("post",location.origin+"/manage/adddeparment");// 设置路由
-      ajax.send(formData);// 发送
-
-    });
-    $('#submit2').click(function(){// 事件监听
-      let formData=new FormData(document.getElementById("newposition"));
-      console.log('formData2');
-      // ajax异步发送表单
-      let ajax=new XMLHttpRequest();
-
-      ajax.open("post",location.origin+"/manage/addposition");// 设置路由
-      ajax.send(formData);// 发送
-
-    });
-
-</script>
+<script type="text/javascript" src="/javascripts/manage.js"></script>
 <%-include('footer')%>
