--- a/views/show/show-footer.ejs
+++ b/views/show/show-footer.ejs
@@ -5,19 +5,6 @@
 	<script src="/libs/layui/layui.all.js"></script>
 	<script type="text/javascript" src="/libs/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="/libs/slick-carousel/slick/slick.min.js"></script>
-	<script type="text/javascript">
-		//轮播图初始化
-		$(document).ready(function(){
-			$(function(){
-				$('.slick-for').slick({
-					autoplay:false,
-					arrows: false,
-					dots: true,
-					// autoplaySpeed:1000,
-					pauseOnHover:false
-				});
-			});	
-		});
-	</script>
+	<script type="text/javascript" src="/javascripts/slickset.js"></script>
 </body>
 </html>
